IGNITE-16943: Make "update configuration" async.
