# modules/configuration/src/main/java/org/apache/ignite/internal/rest/configuration/NodeConfigurationController.java
@@ -31,6 +31,7 @@ import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.inject.Named;
+import java.util.concurrent.CompletableFuture;
 import org.apache.ignite.internal.configuration.rest.presentation.ConfigurationPresentation;
 
 /**
@@ -80,7 +81,7 @@ public class NodeConfigurationController extends AbstractConfigurationController
     }
 
     /**
-     * Updates node configuration in HOCON format.
+     * Updates node configuration in HOCON format. This is represented as a plain text.
      *
      * @param updatedConfiguration the node configuration to update. This is represented as a plain text.
      */
@@ -88,7 +89,7 @@ public class NodeConfigurationController extends AbstractConfigurationController
     @ApiResponse(responseCode = "200", description = "Configuration updated")
     @Consumes(MediaType.TEXT_PLAIN)
     @Patch
-    public void updateConfiguration(@Body String updatedConfiguration) throws Throwable {
-        super.updateConfiguration(updatedConfiguration);
+    public CompletableFuture<Void> updateConfiguration(@Body String updatedConfiguration) throws Throwable {
+        return super.updateConfiguration(updatedConfiguration);
     }
 }
